[gd_scene load_steps=29 format=3 uid="uid://bvypi4wo2acgj"]

[ext_resource type="Texture2D" uid="uid://bjdt31awensku" path="res://src/assets/art/Sprout Lands/UI Sprites/Dialouge UI/Emotes/Teemo Basic emote animations sprite sheet.png" id="1_r452r"]
[ext_resource type="Texture2D" uid="uid://b2ydokqixnyg" path="res://src/assets/art/Sprout Lands/UI Sprites/Sprite sheet for Basic Pack.png" id="2_l8imk"]
[ext_resource type="Script" path="res://src/ui/egg-counter/animated_sprite_2d.gd" id="3_rgt6w"]
[ext_resource type="Script" path="res://src/ui/egg-counter/egg_counter_vbox.gd" id="4_2gkrr"]
[ext_resource type="Texture2D" uid="uid://dq1lb1qryqyds" path="res://src/assets/art/Sprout Lands/Objects/Egg_item.png" id="4_cqwp5"]
[ext_resource type="Script" path="res://src/ui/egg-counter/timer.gd" id="4_e585m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4i5rj"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j77ma"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri306"]
atlas = ExtResource("1_r452r")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ulm2"]
atlas = ExtResource("1_r452r")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dyp8"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8i0p"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow7ya"]
atlas = ExtResource("1_r452r")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ghh"]
atlas = ExtResource("1_r452r")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq5u6"]
atlas = ExtResource("1_r452r")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsbk6"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk5io"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c123p"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgwv5"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwj6i"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvp0m"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eoh5"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqgyk"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj027"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gfbu"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvca3"]
atlas = ExtResource("1_r452r")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe4wk"]
atlas = ExtResource("1_r452r")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8an37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i5rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j77ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri306")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ulm2")
}],
"loop": false,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dyp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8i0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow7ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ghh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq5u6")
}],
"loop": false,
"name": &"ear_wiggle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsbk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk5io")
}],
"loop": true,
"name": &"happy_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c123p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgwv5")
}],
"loop": true,
"name": &"happy_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwj6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvp0m")
}],
"loop": true,
"name": &"happy_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eoh5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqgyk")
}],
"loop": true,
"name": &"sleeping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj027")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gfbu")
}],
"loop": true,
"name": &"sleepy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4wk")
}],
"loop": false,
"name": &"smile",
"speed": 5.0
}]

[node name="EggCounter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MenuExteriorMarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MenuSpriteNinePatchRect" type="NinePatchRect" parent="MarginContainer/MenuExteriorMarginContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
texture = ExtResource("2_l8imk")
region_rect = Rect2(741, 38, 22, 22)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MenuInteriorMarginContainer" type="MarginContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="Frame" type="Sprite2D" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer"]
position = Vector2(63, -2)
scale = Vector2(4, 4)
texture = ExtResource("2_l8imk")
region_enabled = true
region_rect = Rect2(153, 57, 30, 30)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer"]
position = Vector2(63, -2)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8an37")
animation = &"smile"
frame = 5
frame_progress = 1.0
script = ExtResource("3_rgt6w")
metadata/_edit_group_ = true

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Timer" type="Label" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_colors/font_outline_color = Color(0.952941, 0.956863, 0.905882, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
script = ExtResource("4_e585m")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("4_cqwp5")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("4_2gkrr")

[node name="Counter" type="Label" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_colors/font_outline_color = Color(0.952941, 0.956863, 0.905882, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Eggs" type="Label" parent="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0.384314, 0.364706, 1)
text = "Eggs"
horizontal_alignment = 1

[node name="PortraitTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer/AnimatedSprite2D" to="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer/AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="timeout" from="PortraitTimer" to="MarginContainer/MenuExteriorMarginContainer/MenuSpriteNinePatchRect/MenuInteriorMarginContainer/HBoxContainer/PanelContainer/AnimatedSprite2D" method="_on_portrait_timer_timeout"]
